[build-system]
requires = ["setuptools>=62.0", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "regolith"
dynamic=['version', 'dependencies']
authors = [
  { name="Simon J.L. Billinge group", email="simon.billinge@gmail.com" },
  { name="Anthony Scopatz", email="scopatz@gmail.com" },
]
maintainers = [
  { name="Simon J.L. Billinge group", email="simon.billinge@gmail.com" },
  { name="Anthony Scopatz", email="scopatz@gmail.com" },
]
description = "Python package for research group content management system"
keywords = ["content management system"]
readme = "README.rst"
requires-python = ">=3.11, <3.14"
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: POSIX',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Topic :: Scientific/Engineering :: Physics',
        'Topic :: Scientific/Engineering :: Chemistry',
]

[tool.setuptools]
script-files = ["scripts/regolith", "scripts/helper_gui", "scripts/helper_connect", "scripts/profile_regolith", "scripts/profile_helper_gui"]

[project.urls]
Homepage = "https://github.com/regro/regolith/"
Issues = "https://github.com/regro/regolith/issues"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
regolith = ["templates/*",
            "static/*.*",
            "static/img/*.*",
            "*.xsh",
            "*.json"
            ]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/pip.txt"]}

[tool.codespell]
exclude-file = ".codespell/ignore_lines.txt"
ignore-words = ".codespell/ignore_words.txt"
skip = "*.cif,*.dat,*.js,*.tex,*.txt,*.html,*.bib,*.map,*.json"

[tool.docformatter]
recursive = true
wrap-summaries = 72
wrap-descriptions = 72

[tool.black]
line-length = 115
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.rst
  | \.txt
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
